src/SomeClass2MainCompOut.txt
Error(s):
240841000/source.cpp:17:13: error: 'memberFunctionA' is a  \
    member of 'SomeClass'
    myClass.calcPiIsh();
            ^
240841000/source.cpp:7:7: note: implicitly declared private here
        void calcPiIsh(){
             ^
1 error generated.